Update background and commercial

--- a/about-us.html
+++ b/about-us.html
@@ -31,7 +31,7 @@
     <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
 
     <!-- Main CSS-->
-    <link href="css/main.min.css" rel="stylesheet" media="all">
+    <link href="css/main.css" rel="stylesheet" media="all">
 
      <!--Favicons-->
      <link rel="icon" href="./images/cropped-pls-fav-32x32.png" sizes="32x32">
@@ -40,11 +40,13 @@
 </head>
 
 <body class="animsition js-preloader">
+    
     <div class="page-wrapper">
+        <img src="images/about-bg.jpg" alt="about-bg" class="about-bg">
         <!-- HEADER-->
         <header id="header">
             <div class="header header-2 d-none d-lg-block">
-                <div class="header__bar bg-overlay bg-overlay--p85" id="header-default-bg"> 
+                <div class="header__bar" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
                             <div class="header__content">
@@ -78,7 +80,7 @@
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-google" href="https://www.linkedin.com/company/pls-mechanical-inc/">
+                                                <a class="ic-linkedin" href="https://www.linkedin.com/company/pls-mechanical-inc/">
                                                     <i class="zmdi zmdi-linkedin"></i>
                                                 </a>
                                             </li>
@@ -230,7 +232,6 @@
 
         <!-- MAIN-->
         <main id="main" class="tos about-us p-t-60 p-b-60">
-            <img src="images/about-bg.jpg" alt="about-bg" class="about-bg">
 
             <!-- SERVICE-->
             <section class="p-t-150 p-b-60">
@@ -239,33 +240,33 @@
                         <h5 class="title-sub">We are</h5>
                         <h2 class="title-2 p-b-30">Specialists in the field</h2>
                         <p class="about-us p-b-60">PLS Mechanical, Inc. gives your home and business state-of-the-art HVAC systems at unbeatable prices and guarantees the best indoor air quality that technology has to offer. As an authorized dealer of the best-in-class equipments and the preferred vendor for some of the busiest skyscrapers across Manhattan, the team at PLS consistently raises the bar for optimal cost saving solutions without compromising on compliance, sustainability, and comfort. We want to bring those results and expertise to where you live and work. </p>
-                        <p class="about-us p-b-60">PAlso, we will beat your two best quotes/service contracts by 10%.</p>
+                        <p class="about-us p-b-60">Also, we will beat your two best quotes/service contracts by 10%.</p>
                         <button class="au-btn au-btn--solid m-b-60" id="subscribe-btn">Book your free assessment</button>
                         
+                        <div class="row no-gutters">
+                            <div class="col-md-6 col-lg-4">
+                                <article class="media media-service">
+                                    <figure class="media__img">
+                                        <img src="images/Experience.png" alt="Experience" />
+                                    </figure>
+                                </div>
+                                <div class="col-md-6 col-lg-4">
+                                    <article class="media media-service">
+                                        <figure class="media__img">
+                                            <img src="images/HappyClients.png" alt="HappyClients" />
+                                        </figure>
+                                    </article>
+                                </div>
+                                <div class="col-md-6 col-lg-4">
+                                    <article class="media media-service">
+                                        <figure class="media__img">
+                                            <img src="images/CompletedProjects.png" alt="CompletedProjects" />
+                                        </figure>
+                                    </article>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="row no-gutters">
-                        <div class="col-md-6 col-lg-4">
-                            <article class="media media-service">
-                                <figure class="media__img">
-                                    <img src="images/Experience.png" alt="Experience" />
-                                </figure>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <article class="media media-service">
-                                <figure class="media__img">
-                                    <img src="images/HappyClients.png" alt="HappyClients" />
-                                </figure>
-                            </article>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <article class="media media-service">
-                                <figure class="media__img">
-                                    <img src="images/CompletedProjects.png" alt="CompletedProjects" />
-                                </figure>
-                            </article>
-                        </div>
-                    </div>
-                </div>
             </section>
             <!-- END SERVICE-->
 
@@ -395,7 +396,7 @@
                                             </a>
                                         </li>
                                         <li class="list-social__item">
-                                            <a class="ic-google" href="https://www.linkedin.com/company/pls-mechanical-inc/">
+                                            <a class="ic-linkedin" href="https://www.linkedin.com/company/pls-mechanical-inc/">
                                                 <i class="zmdi zmdi-linkedin"></i>
                                             </a>
                                         </li>
