--- a/cooling.html
+++ b/cooling.html
@@ -35,7 +35,7 @@
     <link href="vendor/pagePiling/css/jquery.pagepiling.css" rel="stylesheet" media="all">
 
     <!-- Main CSS-->
-    <link href="css/main.min.css" rel="stylesheet" media="all">
+    <link href="css/main.css" rel="stylesheet" media="all">
 
     <!--Favicons-->
     <link rel="icon" href="./images/cropped-pls-fav-32x32.png" sizes="32x32">
@@ -49,7 +49,7 @@
         <!-- HEADER-->
         <header id="header">
             <div class="header header-2 d-none d-lg-block">
-                <div class="header__bar bg-overlay bg-overlay--p85" id="header-default-bg"> 
+                <div class="header__bar" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
                             <div class="header__content">
@@ -83,7 +83,7 @@
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-google" href="https://www.linkedin.com/company/pls-mechanical-inc/">
+                                                <a class="ic-linkedin" href="https://www.linkedin.com/company/pls-mechanical-inc/">
                                                     <i class="zmdi zmdi-linkedin"></i>
                                                 </a>
                                             </li>
@@ -251,18 +251,18 @@
                                 <img class="rev-slidebg" src="images/cooling-bg.png" alt="Master Slider 01" />
                                 <h4 class="tp-caption tp-resizeme rev-text-1" data-frames="[{&quot;delay&quot;:400,&quot;speed&quot;:1200,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                 data-x="['left']" data-y="['middle']" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[-128, -118, -150, -130, -130]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="['auto']" data-height="[&quot;auto&quot;]"
-                                data-whitespace="[nowrap, nowrap, nowrap, nowrap, nowrap]" data-color="#fff" data-fontweight="400" data-fontsize="[11, 11, 14, 16, 16]" data-textalign="[left, left, left, center, center]">Cooling</h4>
+                                data-whitespace="[nowrap, nowrap, nowrap, nowrap, nowrap]" data-color="#fff" data-fontweight="700" data-fontsize="[16, 16, 17, 18, 18]"  data-textalign="[left, left, left, center, center]">Cooling</h4>
                                 <h2 class="tp-caption tp-resizeme rev-text-2" data-frames="[{&quot;delay&quot;:0,&quot;speed&quot;:1200,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:-50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                 data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[-45, -40, 0, 0, 0]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="[1170, 930, 690, 510, 576]" data-height="[&quot;auto&quot;]"
                                 data-lineheight="[60, 58, 54, 38, 36]" data-whitespace="normal" data-color="#ebebeb" data-fontweight="700" data-fontsize="[48, 42, 46, 32, 32]" data-textalign="[left, left, left, left, left]">Air Conditioning</h2>
                                 <p class="tp-caption tp-resizeme" data-frames="[{&quot;delay&quot;:0,&quot;speed&quot;:1200,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                 data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[70, 70, 100, 80, 70]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="[800,800,690,510,576]" data-height="[&quot;auto&quot;]"
-                                data-lineheight="[30, 30, 26, 20, 20]" data-whitespace="normal" data-color="#ebebeb" data-fontweight="400" data-fontsize="[13, 13, 14, 15, 15]" data-textalign="[left, left, left, left,  left]">Scroll down to read more.</p>
+                                data-lineheight="[30, 30, 26, 20, 20]" data-whitespace="normal" data-color="#ebebeb" data-fontweight="700" data-fontsize="[16, 16, 17, 18, 18]"  data-textalign="[left, left, left, left,  left]">Scroll down to read more.</p>
                                 <a class="tp-caption tp-resizeme"
                                 href="#" target="_self" data-frames="[{&quot;delay&quot;:400,&quot;speed&quot;:1200,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                 data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 15]" data-voffset="[185, 185, 210, 180, 170]" data-width="['auto']" data-height="[&quot;auto&quot;]" data-responsive_offset="on" data-responsive="off" data-whitespace="[nowrap, nowrap, nowrap, nowrap, nowrap]">
-                                    <span class="rev-btn-2">Schedule Now</span>
-                                </a>
+                                <button class="au-btn au-btn--solid" id="schedule-btn" type="submit">Schedule Now</button>
+                            </a>
                             </li>
                         </ul>
                     </div>
@@ -300,7 +300,8 @@
 
              
             <!-- SECTION-->
-            <section class="section-pp pp-easing section-pp--pad section pp-scrollable" data-background="light" data-title="why choose us">
+            <section class="section-pp pp-easing section-pp--pad section pp-scrollable bg-overlay--p85" data-background="light" data-title="why choose us">
+                <img src="./images/black-default-bg.png" alt="black-default-bg" class="black-default-bg">
                 
                 <!-- PROJECT-->
                 <section class="p-t-110 project-section">
@@ -310,20 +311,14 @@
                             <article class="media-project-3">
                                 <div class="media__body">
                                     <figure class="media__img">
-                                        <a href="project-detail-1.html">
-                                            <img src="images/ceiling-ac.jpg" alt="Space Speaker Studio" />
-                                        </a>
+                                        <img src="images/ceiling-ac.jpg" alt="Space Speaker Studio" />
                                     </figure>
-                                    <span class="add">Kharkiv , ukraine</span>
-                                    <span class="year">2018</span>
                                     <div class="media__content">
                                         <div class="pointer"></div>
                                         <h4 class="title-sub title-sub--c8">architecture</h4>
-                                        <h2 class="title-3">Central Air Conditioning</h2>
+                                        <h2 class="title-2">Central Air Conditioning</h2>
                                         <p class="media__text">Room-by-room temperature control with Ductless Mini-split Solutions for Air Conditioning. It’s like a central air system except superior in every way and also mess-free.</p>
-                                        <a class="au-btn au-btn--arrow" href="project-detail-1.html">See Project
-                                            <i class="zmdi zmdi-arrow-right ic-arrow"></i>
-                                        </a>
+                                        <button class="au-btn au-btn--solid" id="schedule-btn" type="submit">Schedule Now</button>
                                     </div>
                                 </div>
                             </article>
@@ -339,22 +334,16 @@
                             <article class="media-project-3 right">
                                 <div class="media__body">
                                     <figure class="media__img">
-                                        <a href="project-detail-1.html">
-                                            <img src="images/unit-ac.jpg" alt="Lunisolar Homestay" />
-                                        </a>
+                                        <img src="images/unit-ac.jpg" alt="Lunisolar Homestay" />
                                     </figure>
-                                    <span class="add">Perth , Australia</span>
-                                    <span class="year">2018</span>
                                     <div class="media__content">
                                         <div class="pointer"></div>
                                         <h4 class="title-sub title-sub--c8">architecture</h4>
-                                        <h2 class="title-3">Ventilation Systems for Cooling</h2>
+                                        <h2 class="title-2">Ventilation Systems for Cooling</h2>
                                         <p class="media__text">Inexpensively avoid heat buildup with any of the following solutions:</p>
                                         <p>&emsp; •Combine a whole house fans with ceiling fans and window fans to circulate the air in your home;</p>
                                         <p>&emsp; •Repurpose the ducts of your central heating and cooling system to provide whole house cooling.</p>
-                                        <a class="au-btn au-btn--arrow" href="project-detail-1.html">See Project
-                                            <i class="zmdi zmdi-arrow-right ic-arrow"></i>
-                                        </a>
+                                        <button class="au-btn au-btn--solid" id="schedule-btn" type="submit">Schedule Now</button>
                                     </div>
                                 </div>
                             </article>
@@ -415,7 +404,7 @@
                                         </li>
                                         <li>
                                             <a href="cooling.html">Cooling</a>
-                                    </li>
+                                        </li>
                                         <li>
                                             <a href="indoor-air-quality.html">Indoor Air Quality</a>
                                         </li>
@@ -489,7 +478,7 @@
                                             </a>
                                         </li>
                                         <li class="list-social__item">
-                                            <a class="ic-google" href="https://www.linkedin.com/company/pls-mechanical-inc/">
+                                            <a class="ic-linkedin" href="https://www.linkedin.com/company/pls-mechanical-inc/">
                                                 <i class="zmdi zmdi-linkedin"></i>
                                             </a>
                                         </li>
