--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -31,7 +31,7 @@
     <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
 
     <!-- Main CSS-->
-    <link href="css/main.min.css" rel="stylesheet" media="all">
+    <link href="css/main.css" rel="stylesheet" media="all">
 
      <!--Favicons-->
      <link rel="icon" href="./images/cropped-pls-fav-32x32.png" sizes="32x32">
@@ -44,7 +44,7 @@
         <!-- HEADER-->
         <header id="header">
             <div class="header header-2 d-none d-lg-block">
-                <div class="header__bar bg-overlay bg-overlay--p85" id="header-default-bg"> 
+                <div class="header__bar" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
                             <div class="header__content">
@@ -78,7 +78,7 @@
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-google" href="https://www.linkedin.com/company/pls-mechanical-inc/">
+                                                <a class="ic-linkedin" href="https://www.linkedin.com/company/pls-mechanical-inc/">
                                                     <i class="zmdi zmdi-linkedin"></i>
                                                 </a>
                                             </li>
@@ -412,27 +412,27 @@
                             <div class="widget widget_socials">
                                 <ul class="list-social list-social-2">
                                     <li class="list-social__item">
-                                        <a class="ic-fb" href="#">
+                                        <a class="ic-fb" href="https://www.facebook.com/plsmechanicalinc">
                                             <i class="zmdi zmdi-facebook"></i>
                                         </a>
                                     </li>
                                     <li class="list-social__item">
-                                        <a class="ic-insta" href="#">
+                                        <a class="ic-insta" href="https://www.instagram.com/plsmechanical/">
                                             <i class="zmdi zmdi-instagram"></i>
                                         </a>
                                     </li>
                                     <li class="list-social__item">
-                                        <a class="ic-twi" href="#">
+                                        <a class="ic-twi" href="https://twitter.com/PLSMechanical">
                                             <i class="zmdi zmdi-twitter"></i>
                                         </a>
                                     </li>
                                     <li class="list-social__item">
-                                        <a class="ic-pinterest" href="#">
+                                        <a class="ic-youtube" href="https://www.youtube.com/channel/UC1il56Zf79YmRoEidSQl24A">
                                             <i class="zmdi zmdi-youtube-play"></i>
                                         </a>
                                     </li>
                                     <li class="list-social__item">
-                                        <a class="ic-google" href="#">
+                                        <a class="ic-linkedin" href="https://www.linkedin.com/company/pls-mechanical-inc/">
                                             <i class="zmdi zmdi-linkedin"></i>
                                         </a>
                                     </li>
