--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
 
     <!-- Main CSS-->
-    <link href="css/main.min.css" rel="stylesheet" media="all">
+    <link href="css/main.css" rel="stylesheet" media="all">
 
      <!--Favicons-->
      <link rel="icon" href="./images/cropped-pls-fav-32x32.png" sizes="32x32">
@@ -44,7 +44,7 @@
         <!-- HEADER-->
         <header id="header">
             <div class="header header-2 d-none d-lg-block">
-                <div class="header__bar bg-overlay bg-overlay--p85" id="header-default-bg"> 
+                <div class="header__bar" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
                             <div class="header__content">
@@ -78,7 +78,7 @@
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-google" href="https://www.linkedin.com/company/pls-mechanical-inc/">
+                                                <a class="ic-linkedin" href="https://www.linkedin.com/company/pls-mechanical-inc/">
                                                     <i class="zmdi zmdi-linkedin"></i>
                                                 </a>
                                             </li>
@@ -230,17 +230,7 @@
 
         <!-- MAIN-->
         <main id="main">
-            <!-- PAGE LINE-->
-            <div class="page-line">
-                <div class="container">
-                    <div class="page-line__inner">
-                        <div class="page-col"></div>
-                        <div class="page-col"></div>
-                        <div class="page-col"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- END PAGE LINE-->
+            <img src="./images/black-default-bg.png" alt="black-default-bg" class="black-default-bg">
 
             <!-- PAGE HEADING-->
             <section class="section p-t-100 p-b-65">
@@ -287,7 +277,7 @@
                                     <div class="col-md-6 p-r-0">
                                         <textarea class="au-textarea" name="message" placeholder="Message*" required="required"></textarea>
                                         <div class="text-right">
-                                            <button class="au-btn au-btn--solid" type="submit">Send message</button>
+                                            <button class="au-btn au-btn--solid" id="subscribe-btn" type="submit">Send message</button>
                                         </div>
                                     </div>
                                 </div>
@@ -426,7 +416,7 @@
                                         </a>
                                     </li>
                                     <li class="list-social__item">
-                                        <a class="ic-google" href="#">
+                                        <a class="ic-linkedin" href="#">
                                             <i class="zmdi zmdi-linkedin"></i>
                                         </a>
                                     </li>
