--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link href="vendor/revolution/css/settings.css" rel="stylesheet" />
 
     <!-- Main CSS-->
-    <link href="css/main.min.css" rel="stylesheet" media="all">
+    <link href="css/main.css" rel="stylesheet" media="all">
 
     <!--Favicons-->
     <link rel="icon" href="./images/cropped-pls-fav-32x32.png" sizes="32x32">
@@ -47,7 +47,7 @@
         <!-- HEADER-->
         <header id="header">
             <div class="header header-2 d-none d-lg-block">
-                <div class="header__bar bg-overlay bg-overlay--p85" id="header-default-bg"> 
+                <div class="header__bar" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
                             <div class="header__content">
@@ -81,7 +81,7 @@
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-google" href="https://www.linkedin.com/company/pls-mechanical-inc/">
+                                                <a class="ic-linkedin" href="https://www.linkedin.com/company/pls-mechanical-inc/">
                                                     <i class="zmdi zmdi-linkedin"></i>
                                                 </a>
                                             </li>
