Toggle navbar to black

--- a/about-us.html
+++ b/about-us.html
@@ -45,7 +45,7 @@
         <img src="images/about-bg.jpg" alt="about-bg" class="about-bg">
         <!-- HEADER-->
         <header id="header">
-            <div class="header header-2 d-none d-lg-block">
+            <div class="navbar header header-2 d-none d-lg-block">
                 <div class="header__bar" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
