--- a/cooling.html
+++ b/cooling.html
@@ -48,7 +48,7 @@
     <main id="main">
         <!-- HEADER-->
         <header id="header">
-            <div class="header header-2 d-none d-lg-block">
+            <div class="navbar header header-2 d-none d-lg-block">
                 <div class="header__bar" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
@@ -315,7 +315,6 @@
                                     </figure>
                                     <div class="media__content">
                                         <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
                                         <h2 class="title-2">Central Air Conditioning</h2>
                                         <p class="media__text">Room-by-room temperature control with Ductless Mini-split Solutions for Air Conditioning. It’s like a central air system except superior in every way and also mess-free.</p>
                                         <button class="au-btn au-btn--solid" id="schedule-btn" type="submit">Schedule Now</button>
@@ -338,7 +337,6 @@
                                     </figure>
                                     <div class="media__content">
                                         <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
                                         <h2 class="title-2">Ventilation Systems for Cooling</h2>
                                         <p class="media__text">Inexpensively avoid heat buildup with any of the following solutions:</p>
                                         <p>&emsp; •Combine a whole house fans with ceiling fans and window fans to circulate the air in your home;</p>
