--- a/heating.html
+++ b/heating.html
@@ -48,7 +48,7 @@
     <main id="main">
         <!-- HEADER-->
         <header id="header">
-            <div class="header header-2 d-none d-lg-block">
+            <div class="navbar header header-2 d-none d-lg-block">
                 <div class="header__bar" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
@@ -314,7 +314,6 @@
                                     </figure>
                                     <div class="media__content">
                                         <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
                                         <h2 class="title-2">Heat Distribution Systems</h2>
                                         <p class="media__text">We install them all!</p>
                                         <button class="au-btn au-btn--solid" id="schedule-btn" type="submit">Schedule Now</button>
@@ -337,7 +336,6 @@
                                     </figure>
                                     <div class="media__content">
                                         <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
                                         <h2 class="title-2">Electric Resistance Heating</h2>
                                         <p class="media__text">Planning a new home addition, limited to electricity-only systems, or looking for 100% energy conversion to heat? If so, we can integrate Electric Furnaces or help you go completely ductless with a Control System that zones your Electric Baseboard Heaters and Electric Wall Heaters. To avoid peak demand charge, we also offer Electric Thermal Storage systems!</p>
                                         <button class="au-btn au-btn--solid" id="schedule-btn" type="submit">Schedule Now</button>
@@ -359,7 +357,6 @@
                                     </figure>
                                     <div class="media__content">
                                         <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
                                         <h2 class="title-2">Furnaces and Boilers</h2>
                                         <p class="media__text">If you prefer a heating system like that of most U.S. homes: Either furnaces or boilers, we are happy to tell you that you do not have to compromise efficiency!</p>
                                         <p>Install, replace, and retrofit your furnaces and boilers the right way with us!</p>
