--- a/indoor-air-quality.html
+++ b/indoor-air-quality.html
@@ -49,7 +49,7 @@
     <main id="main">
         <!-- HEADER-->
         <header id="header">
-            <div class="header header-2 d-none d-lg-block">
+            <div class="navbar header header-2 d-none d-lg-block">
                 <div class="header__bar"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
@@ -289,7 +289,6 @@
                                     </figure>
                                     <div class="media__content">
                                         <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
                                         <h2 class="title-2">Germicidal UV</h2>
                                         <p class="media__text">Best-in-class, Maximum-intensity ultraviolet light that reduces the concentrations of microorganisms such as pathogens, mildew, bacteria, viruses, and mold. </p>
                                             <p>&emsp; • 100% Ozone-free</p>
@@ -314,7 +313,6 @@
                                     </figure>
                                     <div class="media__content">
                                         <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
                                         <h2 class="title-2">Active Sanitization</h2>
                                         <p class="media__text">Inexpensively avoid heat buildup with any of the following solutions:</p>
                                         <p>&emsp; • Combine a whole house fans with ceiling fans and window fans to circulate the air in your home</p>
@@ -339,7 +337,6 @@
                                     </figure>
                                     <div class="media__content">
                                         <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
                                         <h2 class="title-2">Filters and Purifiers</h2>
                                         <p class="media__text">Best-in-class, Maximum-intensity ultraviolet light that reduces the concentrations of microorganisms such as pathogens, mildew, bacteria, viruses, and mold.</p>
                                         <p>&emsp; • 100% Ozone-free</p>
@@ -364,7 +361,6 @@
                                     </figure>
                                     <div class="media__content">
                                         <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
                                         <h2 class="title-2">Humidity Control</h2>
                                         <p class="media__text">Best-in-class, Maximum-intensity ultraviolet light that reduces the concentrations of microorganisms such as pathogens, mildew, bacteria, viruses, and mold.</p>
                                         <p>&emsp; • 100% Ozone-free</p>
