--- a/commercial.html
+++ b/commercial.html
@@ -48,8 +48,8 @@
     <main id="main">
         <!-- HEADER-->
         <header id="header">
-            <div class="header header-2 d-none d-lg-block">
-                <div class="header__bar bg-overlay" id="header-default-bg"> 
+            <div class="navbar header header-2 d-none d-lg-block">
+                <div class="header__bar" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
                             <div class="header__content">
@@ -287,16 +287,15 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="clients col-lg-12 col-md-12  p-b-50">
+                    <img src="images/clients.png" alt="clients">
+                </div>
                 
                 <!-- FOOTER-->
                 <footer class="footer bg-parallax">
                     <div class="bg-overlay bg-overlay--p85"></div> 
                     <div class="container">
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12  p-b-50">
-                                <img src="images/clients.png" alt="clients">
-                            </div>
-                        </div>
                         <div class="row">
                             <div class="col-lg-1 col-md-1">
                                 <div class="footer-col">
