--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="page-wrapper">
         <!-- HEADER-->
         <header id="header">
-            <div class="header header-2 d-none d-lg-block">
+            <div class="navbar header header-2 d-none d-lg-block">
                 <div class="header__bar" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
