Updating interactive diagrams

--- a/commercial.html
+++ b/commercial.html
@@ -48,7 +48,7 @@
     <main id="main">
         <!-- HEADER-->
         <header id="header">
-            <div class="navbar header header-2 d-none d-lg-block">
+            <div class="header header-2 d-none d-lg-block">
                 <div class="header__bar" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
