--- a/cooling.html
+++ b/cooling.html
@@ -282,7 +282,7 @@
                     <div class="rev_slider fullwidthabanner js-rev" data-version="5.4.4" style="display:none" data-rev-layout="fullscreen" data-rev-bullets="false" data-rev-arrows="false">
                         <ul>
                             <li class="rev-item rev-item-1" data-transition="crossfade">
-                                <img class="rev-slidebg" src="images/cooling-interactive-bg.png" alt="Master Slider 01" />
+                                <img class="rev-slidebg interactive" src="images/cooling-interactive-bg-w-hover-icon.png" alt="Master Slider 01" />
                                 <div id="cassette-heater" class="interactiveHover"></div>
                                 <div id="duct-air-handler" class="interactiveHover"></div>
                                 <div id="wall-mounted-heating-cooling" class="interactiveHover"></div>
@@ -290,7 +290,7 @@
                                 <div id="multi-zone-heating-cooling" class="interactiveHover"></div>
                                 <div id="horizontal-ducted" class="interactiveHover"></div>
 
-                                <img src="images/cooling-interactive-bg.png" alt="interactiveOverlay" id="interactiveOverlay" />
+                                <img src="images/cooling-interactive-bg-w-hover-icon.png" alt="interactiveOverlay" id="interactiveOverlay" />
                             </li>
                             </li>
                         </ul>
@@ -300,7 +300,7 @@
 
              
             <!-- SECTION-->
-            <section class="section-pp pp-easing section-pp--pad section pp-scrollable bg-overlay--p85" data-background="light" data-title="why choose us">
+            <section class="section-pp pp-easing section-pp--pad section pp-scrollable bg-overlay--p85 p-t-100" data-background="light" data-title="why choose us">
                 <img src="./images/black-default-bg.png" alt="black-default-bg" class="black-default-bg">
                 
                 <!-- PROJECT-->
@@ -536,7 +536,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEmXgQ65zpsjsEAfNPP9mBAz-5zjnIZBw"></script>
     <script src="js/theme-map.js"></script>
     <script src="js/config-contact.js"></script>
-    <script src="js/config-heating-interactive.js"></script>
+    <script src="js/config-interactive-diagram.js"></script>
 
 
     <!-- Main JS-->
