--- a/maintenance.html
+++ b/maintenance.html
@@ -351,7 +351,7 @@
                                             <img class="service-icon" src="images/thermostat-service-icon.png" data-default-src="images/thermostat-service-icon.png" data-blue-src="images/thermostat-service-icon-blue.png" alt="Thermostat Service">
                                             <p>Thermostat Service</p>
                                         </div>
-                                        <div class="col-md-3 service-item m-l-30 m-b-30" data-category="heating" data-title="Heating Inspection" data-description="Our licensed, expert technicians provide quality furnace repair services that will continue to keep you warm and cozy for years to come." data-image-url="path-to-image.jpg">
+                                        <div class="col-md-3 service-item m-l-30 m-b-30" data-category="heating" data-title="Heating Inspection" data-description="Our licensed, expert technicians provide quality furnace repair services that will continue to keep you warm and cozy for years to come." data-image-url="images/heating-inspection.png">
                                             <img class="service-icon" src="images/heating-inspection-icon.png" data-default-src="images/heating-inspection-icon.png" data-blue-src="images/heating-inspection-icon-blue.png" alt="Heating Inspection">
                                             <p>Heating Inspection</p>
                                         </div>
